syntax = "proto3";
package chainmain.icaauth.v1;

import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/crypto-org-chain/chain-main/x/icaauth/types";

// Msg defines the Msg service.
service Msg {
  // RegisterAccount registers an interchain account on host chain with given `connectionId`
  rpc RegisterAccount(MsgRegisterAccount) returns (MsgRegisterAccountResponse);

  // SubmitTx submits a transaction to the host chain on behalf of interchain account
  rpc SubmitTx(MsgSubmitTx) returns (MsgSubmitTxResponse);
}

// MsgRegisterAccount defines the request message for MsgRegisterAccount
message MsgRegisterAccount {
  // owner represents the owner of the interchain account
  string owner = 1;

  // connectionId represents the IBC `connectionId` of the host chain
  string connectionId = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];

  // version represents the version of the ICA channel
  string version = 3;
}

// MsgRegisterAccountResponse defines the response message for MsgRegisterAccount
message MsgRegisterAccountResponse {}

// MsgSubmitTx defines the request message for MsgSubmitTx
message MsgSubmitTx {
  // owner represents the owner of the interchain account
  string owner = 1;

  // connectionId represents the IBC `connectionId` of the host chain
  string connectionId = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];

  // msgs represents the transactions to be submitted to the host chain
  repeated google.protobuf.Any msgs = 3 [(cosmos_proto.accepts_interface) = "sdk.Msg"];

  // timeoutDuration represents the timeout duration for the IBC packet from last block
  google.protobuf.Duration timeoutDuration = 4 [(gogoproto.stdduration) = true];
}

// MsgSubmitTxResponse defines the response message for MsgSubmitTx
message MsgSubmitTxResponse {}